# LLM_TOPIX

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  tool_verification_test.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  app.py  exceptions.py
backend/app/config/: constants.py  database.py
backend/app/models/: __init__.py  article.py
backend/app/routes/: articles.py
backend/app/services/: article_service.py  formatters.py
backend/app/utils/: __init__.py  date_helpers.py  response_helpers.py
backend/tests/: test_api_endpoints.py  test_article_service.py  test_date_helpers.py  test_formatters.py
database/: init.sql
frontend/: jest.setup.js  next.config.js  package.json
frontend/src/components/: ArticleCard.module.css  ArticleCard.tsx
frontend/src/components/__tests__/: ArticleCard.test.tsx
frontend/src/types/: article.ts
scripts/: setup.sh  test.sh
